Closed
Bug 885701
Opened 12 years ago
Closed 12 years ago
[DOMRequest] Implement DOMRequestService.fireDetailedError
Categories
(Core :: DOM: Device Interfaces, defect)
Core
DOM: Device Interfaces
Tracking
()
People
(Reporter: ferjm, Assigned: ferjm)
References
Details
(Keywords: dev-doc-needed, Whiteboard: [LeoVB+])
Attachments
(2 files, 1 obsolete file)
7.57 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
8.69 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
See https://bugzilla.mozilla.org/show_bug.cgi?id=824717#c4
We also need this for the MMI implementation.
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → ferjmoreno
blocking-b2g: --- → leo?
Assignee | ||
Comment 2•12 years ago
|
||
I still want to test it with a real use case like bug 883178 before asking for r? but I could use some feedback in the meantime :)
Attachment #766606 -
Flags: feedback?(mounir)
Assignee | ||
Comment 3•12 years ago
|
||
Comment on attachment 766606 [details] [diff] [review]
v1
Review of attachment 766606 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/base/test/test_domrequest.html
@@ +66,5 @@
> +var _error = new DOMError("detailedError");
> +ok(true, _error);
> +ok(true, reqserv);
> +ok(true, reqserv.fireError);
> +ok(true, reqserv.fireDetailedError);
Ignore lines 67-70, please. They were there just for debugging purposes.
Assignee | ||
Comment 4•12 years ago
|
||
Comment on attachment 766606 [details] [diff] [review]
v1
Clearing the feedback flag as this actually doesn't work in a real scenario. I get:
JavaScript Error: "Error: Permission denied to access property 'valueOf'"
when trying to access DOMError properties from content.
Attachment #766606 -
Flags: feedback?(mounir)
Comment 5•12 years ago
|
||
Naive question: can't you simply add a .fireError() function that takes a nsIDOMDOMError?
Assignee | ||
Comment 6•12 years ago
|
||
AFAIK there is no nsIDOMDOMError in m-c anymore
Assignee | ||
Comment 7•12 years ago
|
||
Attachment #766606 -
Attachment is obsolete: true
Comment 8•12 years ago
|
||
(In reply to Fernando Jiménez Moreno [:ferjm] (needinfo instead of CC, please) from comment #6)
> AFAIK there is no nsIDOMDOMError in m-c anymore
That sounds like a problem to me but that was not the point of my comment. You could add .fireError() that takes a nsISupports* then. The point being that there is no need to have a new function name, we are just going to add a new signature.
Assignee | ||
Comment 9•12 years ago
|
||
(In reply to Mounir Lamouri (:mounir) from comment #8)
> (In reply to Fernando Jiménez Moreno [:ferjm] (needinfo instead of CC,
> please) from comment #6)
> > AFAIK there is no nsIDOMDOMError in m-c anymore
>
> That sounds like a problem to me but that was not the point of my comment.
> You could add .fireError() that takes a nsISupports* then. The point being
> that there is no need to have a new function name, we are just going to add
> a new signature.
Oh, I see. I was just following Jonas' suggestion at https://bugzilla.mozilla.org/show_bug.cgi?id=824717#c4
I can overload .fireError I guess
I'm fine either way. I'm not a huge fan of overloads though, they work poorly with the typelessness of JavaScript.
Though, most importantly, this is a class that's going to go away as we move to using Promises instead of DOMRequests, so we should do whatever is easiest.
Assignee | ||
Comment 12•12 years ago
|
||
Comment on attachment 767134 [details] [diff] [review]
v1 (m-c)
We agreed via IRC to keep it simple and take the fireDetailedError solution.
Attachment #767134 -
Flags: superreview?(jonas)
Attachment #767134 -
Flags: review?(jonas)
Assignee | ||
Comment 13•12 years ago
|
||
I'll have a b2g18 patch tomorrow (CST)
Updated•12 years ago
|
Target Milestone: --- → 1.1 QE3 (26jun)
Assignee | ||
Updated•12 years ago
|
Attachment #767134 -
Attachment description: v1 → v1 (m-c)
Assignee | ||
Comment 14•12 years ago
|
||
Attachment #768135 -
Flags: superreview?(jonas)
Attachment #768135 -
Flags: review?(jonas)
Attachment #767134 -
Flags: superreview?(jonas)
Attachment #767134 -
Flags: superreview+
Attachment #767134 -
Flags: review?(jonas)
Attachment #767134 -
Flags: review+
Attachment #768135 -
Flags: superreview?(jonas)
Attachment #768135 -
Flags: superreview+
Attachment #768135 -
Flags: review?(jonas)
Attachment #768135 -
Flags: review+
Assignee | ||
Comment 15•12 years ago
|
||
Thanks Jonas!
http://hg.mozilla.org/projects/birch/rev/105681e909e5
![]() |
||
Comment 16•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Updated•12 years ago
|
Keywords: dev-doc-needed
Assignee | ||
Comment 17•12 years ago
|
||
status-b2g18:
--- → fixed
status-b2g18-v1.0.0:
--- → wontfix
status-b2g18-v1.0.1:
--- → wontfix
status-b2g-v1.1hd:
--- → affected
Assignee | ||
Comment 18•12 years ago
|
||
Backed out from b2g18 due to chrome tests failure.
https://hg.mozilla.org/releases/mozilla-b2g18/rev/2d9072f92b52
I won't be able to fix it until tomorrow as I am taking a 20 hours flight.
Assignee | ||
Updated•12 years ago
|
Assignee | ||
Comment 19•12 years ago
|
||
Re-pushed to b2g18: https://hg.mozilla.org/releases/mozilla-b2g18/rev/b5e2fec86fc4
Assignee | ||
Updated•12 years ago
|
Comment 20•12 years ago
|
||
Updated•12 years ago
|
Whiteboard: [LeoVB+]
You need to log in
before you can comment on or make changes to this bug.
Description
•