Bug 885701 - [DOMRequest] Implement DOMRequestService.fireDetailedError. r,sr=sicking